[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "face-scanner"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.scripts]
face-scanner = "src.scanner:main"

[tool.setuptools.packages.find]
where = ["."]
